attempt to fix link alignment on mobile

--- a/styles/blocks/curiosities.css
+++ b/styles/blocks/curiosities.css
@@ -28,7 +28,7 @@
 
 @media (max-width: 991px) {
   .curiosities__subtitle {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .curiosities__text {
