--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -11,6 +11,8 @@
   justify-content: center;
   gap: 16px;
   margin-top: 50px;
+  width: 100%;
+  padding-inline: 20px;
 }
 
 .footer__copy {
