--- a/styles/blocks/schedule.css
+++ b/styles/blocks/schedule.css
@@ -1,5 +1,6 @@
 .schedule {
   padding-bottom: 160px;
+  padding-inline: 35px;
 }
 
 .schedule__event {
